--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: Laravel CI Pipeline
 
 on:
   push:
@@ -9,40 +9,36 @@ on:
       - main
 
 jobs:
-  # 🧪 1️⃣ Run Tests First
-  Testing:
-    name: Run Unit Tests
+  test:
+    name: Run Laravel Tests
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up Java
-        uses: actions/setup-java@v4
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          php-version: '8.3'
+          extensions: mbstring, bcmath, xml, mysql, zip, gd
+          coverage: none
 
-      - name: Run Tests
-        run: mvn test --batch-mode
+      - name: Check PHP Version
+        run: php -v
 
-      - name: Checkstyle Analysis
-        run: mvn checkstyle:checkstyle --batch-mode
+      - name: Install Composer Dependencies
+        run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
-  # 🏗️ 2️⃣ Build Job (runs only if tests pass)
-  Build:
-    name: Build Project
-    runs-on: ubuntu-latest
-    needs: Testing
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Set up environment file
+        run: |
+          cp .env.example .env || true
+          php artisan key:generate
 
-      - name: Set up Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+      - name: Run Laravel Tests
+        run: php artisan test
 
-      - name: Build with Maven
-        run: mvn clean install --batch-mode
+      - name: Run Code Style Check (PHP_CodeSniffer)
+        run: |
+          composer global require "squizlabs/php_codesniffer=*"
+          ~/.composer/vendor/bin/phpcs --standard=PSR12 app/ || true
